<resources>
    <string name="app_name">Nearmy</string>
    <string name="country_iso_code">co</string>

    <!-- Firebase notifications -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">switch</string>
    <string name="fcm_message">Switch Notification title</string>
    <string name="msg_subscribed" translatable="false">Subscribed to switch topic</string>
    <string name="msg_subscribe_failed" translatable="false">Failed to subscribe to switch topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <!-- Internet -->
    <string name="internet_no_internet_connection">No Internet connection</string>
    <string name="internet_server_error">Server Error</string>
    <string name="internet_unknown_error">Unknown error</string>
    <string name="internet_unknown_response">Unknown Response</string>

    <!-- Snackbars -->
    <string name="alert_sign_in_successful">SignIn successful</string>
    <string name="alert_sign_in_canceled">Sign in cancelled</string>
    <string name="alert_info_updated">Info updated</string>
    <string name="alert_profile_picture_updated">Profile picture updated</string>

    <!-- Permissions -->
    <string name="permissions_error">Nearmy needs know your location</string>
    <string name="permissions_button_allow">Allow</string>
    <string name="permissions_button_cancel">Cancel</string>

    <!-- Menu titles -->
    <string name="title_activity_user">Profile settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_fragment_home">Home</string>
    <string name="title_fragment_place">My Place</string>

    <string name="title_fragment_starred_places">Starred Places</string>
    <string name="title_fragment_notifications">Notifications</string>
    <string name="title_fragment_stories">Stories</string>
    <string name="title_fragment_settings">Settings</string>

    <string name="menu_title_filters">Filters</string>
    <string name="menu_title_done">Done</string>
    <string name="menu_title_edit_place">Edit place</string>

    <!-- Activity home -->
    <string name="activity_home_btn_save">Save</string>
    <string name="activity_home_btn_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Users Fragment -->
    <string name="users_fragment_name_user">Name</string>
    <string name="users_fragment_name_company">Company name</string>
    <string name="users_fragment_email">Email</string>
    <string name="users_fragment_location">Location</string>
    <string name="users_fragment_opening_time">Opening time</string>
    <string name="users_fragment_closing_time">Closing time</string>

    <string name="users_fragment_nit">NIT</string>
    <string name="users_fragment_signboard">Signboard</string>
    <string name="users_fragment_category">Category</string>
    <string name="users_fragment_description">Description</string>

    <string name="users_fragment_name_user_error">Empty name</string>
    <string name="users_fragment_name_company_error">Empty company name</string>
    <string name="users_fragment_email_error">Empty email</string>
    <string name="users_fragment_location_error">Empty location</string>
    <string name="users_fragment_nit_error">Empty NIT</string>
    <string name="users_fragment_signboard_error">Empty Signboard</string>
    <string name="users_fragment_description_error">Empty Description</string>
    <string name="users_fragment_opening_time_error">Empty Opening time</string>
    <string name="users_fragment_closing_time_error">Empty Closing time</string>

    <string name="users_fragment_account_type_user">User account</string>
    <string name="users_fragment_account_type_company">Company account</string>
    <string name="user_fragment_next_button">Next</string>
    <string name="user_fragment_save_button">Save</string>
    <string name="user_fragment_select_picture">Select Picture</string>

    <string name="place_spinner_value_food">Food</string>
    <string name="place_spinner_value_coffee">Coffee</string>
    <string name="place_spinner_value_nightlife">Nightlife</string>
    <string name="place_spinner_value_fun">Fun</string>
    <string name="place_spinner_value_shopping">Shopping</string>

    <string name="title_activity_maps">Map</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Notifications Fragment -->
    <string name="notifications_fragment_notification_button">Send notification</string>
    <string name="notifications_fragment_notification_title">Title</string>
    <string name="notifications_fragment_notification_message">Message</string>

    <!-- Settings Fragment -->
    <string name="settings_logout_title">Logout</string>
    <string name="settings_logout_summary">Click to logout of this device.</string>

    <!-- Settings keys -->
    <string name="settings_key_logout" translatable="false">logout</string>

    <!-- Filter Fragment -->
    <string name="filters_fragment_radio_distance">Radio distance</string>
    <string name="filters_fragment_add_category">Add category</string>
    <string name="filters_fragment_filters">Filters</string>
    <string name="filters_fragment_categories">Categories</string>
    <string name="filters_fragment_bread_crumbs_root">All Categories</string>


    <!-- Place details fragment -->
    <string name="place_details_go_button">Go</string>
    <string name="place_details_call_button">Call</string>
    <string name="place_details_open_chip">Open</string>
    <string name="place_details_closed_chip">Closed</string>
    <string name="place_details_distance">%1$s meters</string>
    <string name="place_details_time" translatable="false">%1$s:%2$s - %3$s:%4$s</string>
    <string name="place_details_rate_size" translatable="false">(%1$s)</string>
    <string name="place_details_comments">Comments</string>
    <string name="place_details_not_comments">Doesn\'t have comments yet</string>

    <!-- Swipe fragment -->
    <string name="swipe_not_places_found_message">No places were found.</string>

    <!-- Starred Places fragment -->
    <string name="starred_not_places_found_message">Doesn\'t have starred places yet.</string>
    <string name="starred_place_removed">Starred place removed successfully</string>
    <string name="starred_place_removed_undo">Undo</string>

    <!-- MyQualify dialog fragment -->
    <string name="qualify_dialog_fragment_title">Qualify</string>
    <string name="qualify_dialog_fragment_comment">Comment</string>
    <string name="qualify_dialog_fragment_send_button">Send</string>
    <string name="qualify_dialog_fragment_cancel_button">Cancel</string>

    <!-- Edit place fragment -->
    <string name="edit_place_fragment_images_title">Edit images</string>
    <string name="edit_place_fragment_stories_title">Edit stories</string>

    <!-- Stories activity -->
    <string name="stories_remaining_time_h">%1$s h ago</string>
    <string name="stories_remaining_time_m">%1$s m ago</string>
    <string name="stories_remaining_time_d">%1$s days ago</string>
    <string name="stories_remaining_time_finished">Finished</string>
    <string name="stories_dialog_title">Confirm action</string>
    <string name="stories_dialog_message">Do you want to delete this story?</string>
    <string name="stories_dialog_positive_button">Yes</string>
    <string name="stories_dialog_neutral_button">Cancel</string>

    <!-- Place card dummy data -->
    <string name="place_card_view_name_dummy" translatable="false">Name lorem name lorem</string>
    <string name="place_card_view_location_dummy" translatable="false">Location lorem location </string>
    <string name="place_card_view_distance_dummy" translatable="false">Distance lorem distance</string>
    <string name="filters_radio_distance">Radio distance</string>
    <string name="filters_fragment_add">Add Category</string>
    <string name="filters_fragment_group_categories">Categories</string>
    <string name="filters_fragment_my_filters">My filters</string>
    <string name="settings_logout_button">Logout</string>


</resources>
