<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item-->
        <!--android:id="@+id/navigation_dashboard"-->
        <!--android:icon="@drawable/ic_dashboard_black_24dp"-->
        <!--android:title="@string/title_dashboard" />-->

    <item
        android:id="@+id/navigationHome"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_fragment_home" />

    <item
        android:id="@+id/navigationStarredPlaces"
        android:icon="@drawable/ic_star_black_24dp"
        android:visible="false"
        android:title="@string/title_fragment_starred_places" />

    <item
        android:id="@+id/navigationNotifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:visible="false"
        android:title="@string/title_fragment_notifications" />

    <item
        android:id="@+id/navigationSettings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_fragment_settings" />

</menu>
